<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:weightSum="6"
            tools:ignore="UselessParent">
            <TextView
                android:text="@string/Connexion"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/nom"
                android:text="@string/nom_utilisateur"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/nom_e"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autofillHints="text" />
            <TextView
                android:id="@+id/mdp"
                android:text="@string/mdp"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/mdp_e"
                android:autofillHints="text"
                android:hint="@string/mdp_hint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_confirmation"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirmation"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>