<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#C4BEFA">

        <ImageView
            android:id="@+id/imageChat"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/chat_violet_1"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:weightSum="6"
            tools:ignore="UselessParent">
            <TextView
                android:text="@string/Inscription"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textSize="32sp"
                android:textColor="#AC73FA"
                android:textStyle="bold"
                android:fontFamily="@font/police_playwritehu_variablefont_wght"/>
            <TextView
                android:id="@+id/nom"
                android:text="@string/nom_utilisateur"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#000000"/>
            <EditText
                android:id="@+id/nom_e"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autofillHints="text"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/mdp"
                android:text="@string/mdp"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#000000"/>
            <EditText
                android:id="@+id/mdp_e"
                android:autofillHints="text"
                android:hint="@string/mdp_hint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#000000"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_confirmation"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirmation"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>